packages/typ/tests/fixtures/diagnostics/0312_fun_monomorphic_custom_variant_use_08.ml
type left_theta = On_theta of int
type right_theta = Off_theta of bool
let use_theta f = (f (On_theta 7), f (Off_theta true))
